Fix alignment of image and sample dev settings

--- a/django/app/static/style.css
+++ b/django/app/static/style.css
@@ -186,6 +186,7 @@ strong {
 
 .google_play_badge {
   height: 42px;
+  margin-bottom: -13px;
 } 
 
 .light {
